# py_qa

./: .gitignore  ADVICE_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCED_ANALYSIS_PLAN.md  LICENSE  PENDING.md  PLAN.md  README.md  RECOVERY.md  REORG_MODULES.md  REORG_PLAN.md  SECURITY.md  SELECTION.md  SOLID_CLI.md  SPACY_TREESITTER.md  TOOL_RESTRUCTURE_PLAN.md  WRAPPER.md  __init__.py  _check_repo.sh  _check_venv.sh  _venv_check.sh  check-banned-words  check-banned-words.sh  check-quality  check-quality.sh  claude_lint.sh  claude_test.sh  claude_test_all.sh  doctor.txt  gen_aider_list.sh  install  install-hooks  install-hooks.sh  lint  lint.py  lint.sh  pre_run_clean.sh  pyproject.toml  security-scan  (+5 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
artifacts/: fake_py311.py  fake_py_outside.py  fake_uv.sh  sample_warnings.001
cli/: CLI_MODULE.md
docs/: ARCHITECTURE.md  CACHING.md
docs/release/: 0.2.0.md  0.3.0.md
docs/reorg/: PHASE0.md  PHASE1.md  PHASE12.md  PHASE13.md  PHASE2.md  PHASE6.md  PHASE7A.md  PHASE9.md
docs/tooling/: TOOL_CATALOG_GUIDE.md
hooks/: README.md  commit-msg  pre-commit  pre-push
old_scripts/: _check_repo.sh  _check_venv.sh  claude_lint.sh  claude_test.sh  claude_test_all.sh  gen_aider_list.sh
pyreadstat_patch/: README.md  __init__.py  apply_patch_and_install.sh  install_patched_pyreadstat.py  patch_after_cython.py  setup_patch_environment.py
ref_docs/: AGENT_CODING_GUIDE.md  PYTEST_GUIDELINES.md  SOLID_GUIDE.md  tool-schema.json
ref_docs/golang/: Go_GOOGLE_WIRE_GUIDE.md  Go_SOLID_GUIDE.md
ref_docs/python/: Python_CODING_STANDARDS.md  Python_DEPENDENCY_INJECTOR_GUIDE.md  Python_GOOGLE_GENAI_GUIDE.md  Python_MODULE_DESIGN_GUIDE.md  Python_POLARS_USAGE_GUIDE.md  Python_PYDANTIC_V2_GUIDE.md  Python_PYTEST_GUIDELINES.md  Python_SOLID_GUIDE.md  Python_Typer_CLI_GUIDE.md
ref_docs/tool_help/: SHARED_KNOBS.md  actionlint_cmd_help.txt  bandit_cmd_help.txt  checkmake_cmd_help.txt  checkmake_help.txt  dockerfilelint_cmd_help.txt  dotenv-linter_cmd_help.txt  hadolint_help.txt  perltidy_help.txt  (+11 more)
reorg/: __init__.py
scripts/: __init__.py  cli_launcher.py
tests/: __init__.py  conftest.py  test_action_executor.py  test_actionlint_tool.py  test_analysis_duplication.py  test_artifact_paths.py  test_autoloads_spacy_model.py  test_banned.py  test_black_tool.py  test_cache.py  test_cache_context.py  test_catalog_metadata.py  test_catalog_strategies.py  test_checkmake_tool.py  test_clean.py  test_cli_config.py  test_cli_install.py  test_cli_plugins.py  test_config.py  test_config_loader.py  test_context.py  test_cpplint_tool.py  test_diagnostic_filter.py  test_diagnostics.py  test_discovery.py  test_dockerfilelint_tool.py  test_doctor.py  test_dotenv_linter_tool.py  test_eslint_tool.py  test_filesystem_paths.py  test_golangci_tool.py  test_gts_tool.py  test_hadolint_tool.py  test_hooks.py  test_installs.py  test_interfaces_integration.py  test_isort_tool.py  test_kube_linter_tool.py  test_languages.py  test_lint_cli.py  (+43 more)
tooling/: TOOLING.md
tooling_spec/: CHANGELOG.md  README.md  pyproject.toml
tooling_spec/schema/catalog_schema/: SCHEMA.md  tool_definition.schema.json
tooling_spec/src/pyqa_tooling_spec/: __init__.py
(+703 files in other folders)
