# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Blackcat Informatics® Inc.

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqa-tooling-spec"
version = "0.1.0"
description = "Standalone distribution of the pyqa tooling catalog specification"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Blackcat Informatics" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/BlackcatInformatics/py_qa"
Documentation = "https://github.com/BlackcatInformatics/py_qa/tree/main/tooling_spec"
